--- a/style.css
+++ b/style.css
@@ -109,3 +109,30 @@ button:hover{background:#4850d4}
 @keyframes blink {
   50% { opacity: 0; }
 }
+
+#splashSection {
+  position: relative;
+  overflow: hidden;
+}
+
+#splashLogo {
+  max-width: 40%;
+  z-index: 10;
+  position: relative;
+}
+
+
+@keyframes floatUp {
+  0% {
+    transform: translateY(100vh) scale(0.5);
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.2;
+  }
+  100% {
+    transform: translateY(-20vh) scale(1.5);
+    opacity: 0;
+  }
+}
+
